--- a/styles/style.css
+++ b/styles/style.css
@@ -7,19 +7,19 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  padding: 10pxpx;
-  border-radius: 10px;
+  padding: 10px;
+  background: linear-gradient(135deg, #224fa9, #dda3ec);
 }
 .toDo {
   width: 100%;
   max-width: 540px;
-  background: #95417c;
+  background: rgb(203, 180, 214);
   margin: 100px auto 20px;
   padding: 40px 30px 70px;
   border-radius: 10px;
 }
 h1{
-  margin-bottom: 8px;
+  margin-bottom: 25px;
 }
 .input-section {
   display: flex;
@@ -30,7 +30,7 @@ h1{
   margin-bottom: 25px;
 } 
 
-#taskInput{
+input{
   flex: 1;
   border: none;
   outline: none;
@@ -40,70 +40,63 @@ h1{
   margin-right: 5rem;
 }
 
-button {
+button{
   padding: 10px 15px;
   font-size: 1rem;
   cursor: pointer;
-  border-radius: 5px;
-  background: rgb(170, 159, 159);
+  border-radius: 1px;
+  background: rgb(37, 35, 35);
   color: #fff;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
-  font-size: 15px;
-
+ul li{
+    display: flex; 
+    gap: 5px;
+    margin-bottom: 9px;
+    list-style: none;
+    font-size: 25px;
+    padding: 0 40px;
+    user-select: none;
+    cursor: pointer;
+    position: relative;
 }
-
-li {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #f0f0f0;
-  padding: 5px;
-  margin: 2rem 1rem;
-  border-radius: 5px;
-}
-
-li span {
-  flex: 1;
-  margin-left: 10px;
-}
-
-.completed {
-  text-decoration: line-through;
-  color: gray;
-}
-.delete-btn {
-  background: none;
-  border: none;
-  color: red;
-  font-size: 18px;
-  cursor: pointer;
-}
-li input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  border: 2px solid #555;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-}
-
-li input[type="checkbox"]:checked {
-  background-color: #4caf50;
-  border-color: #4caf50;
-}
-
-li input[type="checkbox"]:checked::after {
+ul li::before {
   content: '';
   position: absolute;
-  left: 5px;
-  top: 1px;
-  width: 5px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  transform: rotate(45deg);
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background-color: #161716;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top : 5px;
+  left: 0;
+  border: 1px solid #0d0e0d;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+ul li.checked {
+    color: #555;
+    text-decoration: line-through;
+}
+ul li.checked::before {
+  content: '✓';
+}
+ul li span {
+    position: absolute;
+    right: 0;
+    top: 5px;
+    width: 40px;
+    height: 40px; 
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius:50%;
+}
+
+ul li span:hover{
+    background: #edeef0;
 }
